# dota2-truecost

./: .gitignore  CLAUDE.md  LICENSE  analyse_patch.py  lint.sh  pyproject.toml  readme.md
.github/workflows/: ci.yml
ai_instructions/cookbook/: 01_add_axiom.md  02_add_item_override.md  03_debug_efficiency.md  04_yaml_reference.md  05_batch_validation.md  README.md
data/: latest.txt
docs/: comparison.html  index.html  patches.js  patches.json
docs/patch_7.40c/: axioms_table.html  data.js  interactive_chart.html  items_table.html
docs/patch_7.41b/: axioms_table.html  data.js  interactive_chart.html  items_table.html
liquipedia_parsed/: items_liquipedia.json
liquipedia_parsed/cache/: abyssal_blade.json  aeon_disk.json  aether_lens.json  aghanim_s_blessing.json  aghanim_s_scepter.json  aghanim_s_shard.json  arcane_blink.json  arcane_boots.json  armlet_of_mordiggian.json  assault_cuirass.json  band_of_elvenskin.json  battle_fury.json  belt_of_strength.json  black_king_bar.json  blade_mail.json  blade_of_alacrity.json  blades_of_attack.json  blink_dagger.json  blitz_knuckles.json  blood_grenade.json  bloodstone.json  bloodthorn.json  boots_of_bearing.json  boots_of_speed.json  boots_of_travel.json  boots_of_travel_2.json  bottle.json  bracer.json  broadsword.json  buckler.json  butterfly.json  chainmail.json  chasm_stone.json  circlet.json  clarity.json  claymore.json  cloak.json  consecrated_wraps.json  cornucopia.json  (+147 more)
src/: requirements.txt
tests/: __init__.py  conftest.py  test_calculate_helpers.py  test_calculator.py  test_loader.py  test_pipeline.py
(+24 files in other folders)
